--- a/modules/ROOT/partials/security/securing-embedded-external-resources.adoc
+++ b/modules/ROOT/partials/security/securing-embedded-external-resources.adoc
@@ -15,14 +15,14 @@ This option controls whether the editor will add a `sandbox=""` attribute to all
 ----
 tinymce.init({
   selector: 'textarea',  // change this value according to your html
-  sandbox_iframes: false // default
+  sandbox_iframes: true
 });
 ----
 
 [[convert-unsafe-embeds]]
 ==== `convert_unsafe_embeds` option
 
-This option controls whether an `<object>` and `<embed>` elements will be converted to more restrictive alternatives, namely `<img>` for image MIME types, `<video>` for video MIME types, `<audio>` audio MIME types, or `<iframe>` for other or unspecified MIME types. 
+This option controls whether an `<object>` and `<embed>` elements will be converted to more restrictive alternatives, namely `<img>` for image MIME types, `<video>` for video MIME types, `<audio>` for audio MIME types, or `<iframe>` for other or unspecified MIME types. 
 
 When converted to `<img>`, `<video>`, or `<audio>`, this prevents the embedded resource from performing potentially malicious actions including scripting, file downloads, browser popups, passing the same-origin policy, among others. Enable the `sandbox_iframes` option in addition to ensure <iframe> conversions are also neutralised.
 
@@ -38,6 +38,6 @@ When converted to `<img>`, `<video>`, or `<audio>`, this prevents the embedded r
 ----
 tinymce.init({
   selector: 'textarea',  // change this value according to your html
-  convert_unsafe_embeds: false // default
+  convert_unsafe_embeds: true
 });
 ----
