--- a/modules/ROOT/partials/configuration/force_hex_color.adoc
+++ b/modules/ROOT/partials/configuration/force_hex_color.adoc
@@ -1,7 +1,7 @@
 [[force_hex_color]]
 == `+force_hex_color+`
 
-This option allows the integrator to optionally force the conversion of either RGB or HEX colors.
+This option allows the integrator to optionally force the conversion of either RGB or RGBA colors into HEX colors.
 
 *Type:* `+String+`
 
