--- a/modules/ROOT/partials/configuration/force_hex_color.adoc
+++ b/modules/ROOT/partials/configuration/force_hex_color.adoc
@@ -19,3 +19,7 @@ tinymce.init({
   force_hex_color: 'always'
 });
 ----
+
+* **force_hex_color: 'always'**: all colors are converted and applied as HEX format.
+* **force_hex_color: 'rgb_only'**: only RGB and not RGBA colors are converted and applied as HEX.
+* **force_hex_color: 'off'**: (default option) no conversion to hex is applied, and they are left as their input format.
