DOC-2228: Updates to bundling with js,  to bundling with es6+vite.

--- a/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-plugin-files.adoc
@@ -326,3 +326,7 @@ include::partial$plugin-files/plugin-file-list-visualchars.adoc[]
 === Word Count (`+wordcount+`)
 
 include::partial$plugin-files/plugin-file-list-wordcount.adoc[]
+
+
+[[bundling-plugin-language-files]]
+include::partial$module-loading/bundling-plugin-language-files.adoc[]
