--- a/modules/ROOT/partials/plugin-files/plugin-file-list-advtable.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-advtable.adoc
@@ -1,41 +1,5 @@
-....
-./plugins/advtable/langs/ar.js
-./plugins/advtable/langs/bg_BG.js
-./plugins/advtable/langs/ca.js
-./plugins/advtable/langs/cs.js
-./plugins/advtable/langs/da.js
-./plugins/advtable/langs/de.js
-./plugins/advtable/langs/el.js
-./plugins/advtable/langs/es.js
-./plugins/advtable/langs/eu.js
-./plugins/advtable/langs/fa.js
-./plugins/advtable/langs/fi.js
-./plugins/advtable/langs/fr_FR.js
-./plugins/advtable/langs/he_IL.js
-./plugins/advtable/langs/hi.js
-./plugins/advtable/langs/hr.js
-./plugins/advtable/langs/hu_HU.js
-./plugins/advtable/langs/id.js
-./plugins/advtable/langs/it.js
-./plugins/advtable/langs/ja.js
-./plugins/advtable/langs/kk.js
-./plugins/advtable/langs/ko_KR.js
-./plugins/advtable/langs/ms.js
-./plugins/advtable/langs/nb_NO.js
-./plugins/advtable/langs/nl.js
-./plugins/advtable/langs/pl.js
-./plugins/advtable/langs/pt_BR.js
-./plugins/advtable/langs/pt_PT.js
-./plugins/advtable/langs/ro.js
-./plugins/advtable/langs/ru.js
-./plugins/advtable/langs/sk.js
-./plugins/advtable/langs/sl_SI.js
-./plugins/advtable/langs/sv_SE.js
-./plugins/advtable/langs/th_TH.js
-./plugins/advtable/langs/tr.js
-./plugins/advtable/langs/uk.js
-./plugins/advtable/langs/vi.js
-./plugins/advtable/langs/zh_CN.js
-./plugins/advtable/langs/zh_TW.js
+.Base js file
+[source, js]
+----
 ./plugins/advtable/plugin.js
-....
+----
