--- a/modules/ROOT/partials/plugin-files/plugin-file-list-autocorrect.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-autocorrect.adoc
@@ -1,41 +1,5 @@
-....
-./plugins/autocorrect/langs/ar.js
-./plugins/autocorrect/langs/bg_BG.js
-./plugins/autocorrect/langs/ca.js
-./plugins/autocorrect/langs/cs.js
-./plugins/autocorrect/langs/da.js
-./plugins/autocorrect/langs/de.js
-./plugins/autocorrect/langs/el.js
-./plugins/autocorrect/langs/es.js
-./plugins/autocorrect/langs/eu.js
-./plugins/autocorrect/langs/fa.js
-./plugins/autocorrect/langs/fi.js
-./plugins/autocorrect/langs/fr_FR.js
-./plugins/autocorrect/langs/he_IL.js
-./plugins/autocorrect/langs/hi.js
-./plugins/autocorrect/langs/hr.js
-./plugins/autocorrect/langs/hu_HU.js
-./plugins/autocorrect/langs/id.js
-./plugins/autocorrect/langs/it.js
-./plugins/autocorrect/langs/ja.js
-./plugins/autocorrect/langs/kk.js
-./plugins/autocorrect/langs/ko_KR.js
-./plugins/autocorrect/langs/ms.js
-./plugins/autocorrect/langs/nb_NO.js
-./plugins/autocorrect/langs/nl.js
-./plugins/autocorrect/langs/pl.js
-./plugins/autocorrect/langs/pt_BR.js
-./plugins/autocorrect/langs/pt_PT.js
-./plugins/autocorrect/langs/ro.js
-./plugins/autocorrect/langs/ru.js
-./plugins/autocorrect/langs/sk.js
-./plugins/autocorrect/langs/sl_SI.js
-./plugins/autocorrect/langs/sv_SE.js
-./plugins/autocorrect/langs/th_TH.js
-./plugins/autocorrect/langs/tr.js
-./plugins/autocorrect/langs/uk.js
-./plugins/autocorrect/langs/vi.js
-./plugins/autocorrect/langs/zh_CN.js
-./plugins/autocorrect/langs/zh_TW.js
+.Base js file
+[source, js]
+----
 ./plugins/autocorrect/plugin.js
-....
+----
