--- a/modules/ROOT/partials/plugin-files/plugin-file-list-editimage.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-editimage.adoc
@@ -1,41 +1,5 @@
-....
-./plugins/editimage/langs/ar.js
-./plugins/editimage/langs/bg_BG.js
-./plugins/editimage/langs/ca.js
-./plugins/editimage/langs/cs.js
-./plugins/editimage/langs/da.js
-./plugins/editimage/langs/de.js
-./plugins/editimage/langs/el.js
-./plugins/editimage/langs/es.js
-./plugins/editimage/langs/eu.js
-./plugins/editimage/langs/fa.js
-./plugins/editimage/langs/fi.js
-./plugins/editimage/langs/fr_FR.js
-./plugins/editimage/langs/he_IL.js
-./plugins/editimage/langs/hi.js
-./plugins/editimage/langs/hr.js
-./plugins/editimage/langs/hu_HU.js
-./plugins/editimage/langs/id.js
-./plugins/editimage/langs/it.js
-./plugins/editimage/langs/ja.js
-./plugins/editimage/langs/kk.js
-./plugins/editimage/langs/ko_KR.js
-./plugins/editimage/langs/ms.js
-./plugins/editimage/langs/nb_NO.js
-./plugins/editimage/langs/nl.js
-./plugins/editimage/langs/pl.js
-./plugins/editimage/langs/pt_BR.js
-./plugins/editimage/langs/pt_PT.js
-./plugins/editimage/langs/ro.js
-./plugins/editimage/langs/ru.js
-./plugins/editimage/langs/sk.js
-./plugins/editimage/langs/sl_SI.js
-./plugins/editimage/langs/sv_SE.js
-./plugins/editimage/langs/th_TH.js
-./plugins/editimage/langs/tr.js
-./plugins/editimage/langs/uk.js
-./plugins/editimage/langs/vi.js
-./plugins/editimage/langs/zh_CN.js
-./plugins/editimage/langs/zh_TW.js
+.Base js file
+[source, js]
+----
 ./plugins/editimage/plugin.js
-....
+----
