--- a/modules/ROOT/partials/plugin-files/plugin-file-list-emoticons.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-emoticons.adoc
@@ -1,5 +1,7 @@
-....
+.Base js file
+[source, js]
+----
+./plugins/emoticons/plugin.js
 ./plugins/emoticons/js/emojiimages.js
 ./plugins/emoticons/js/emojis.js
-./plugins/emoticons/plugin.js
-....
+----
