--- a/modules/ROOT/partials/plugin-files/plugin-file-list-footnotes.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-footnotes.adoc
@@ -1,41 +1,5 @@
-....
-./plugins/footnotes/langs/ar.js
-./plugins/footnotes/langs/bg_BG.js
-./plugins/footnotes/langs/ca.js
-./plugins/footnotes/langs/cs.js
-./plugins/footnotes/langs/da.js
-./plugins/footnotes/langs/de.js
-./plugins/footnotes/langs/el.js
-./plugins/footnotes/langs/es.js
-./plugins/footnotes/langs/eu.js
-./plugins/footnotes/langs/fa.js
-./plugins/footnotes/langs/fi.js
-./plugins/footnotes/langs/fr_FR.js
-./plugins/footnotes/langs/he_IL.js
-./plugins/footnotes/langs/hi.js
-./plugins/footnotes/langs/hr.js
-./plugins/footnotes/langs/hu_HU.js
-./plugins/footnotes/langs/id.js
-./plugins/footnotes/langs/it.js
-./plugins/footnotes/langs/ja.js
-./plugins/footnotes/langs/kk.js
-./plugins/footnotes/langs/ko_KR.js
-./plugins/footnotes/langs/ms.js
-./plugins/footnotes/langs/nb_NO.js
-./plugins/footnotes/langs/nl.js
-./plugins/footnotes/langs/pl.js
-./plugins/footnotes/langs/pt_BR.js
-./plugins/footnotes/langs/pt_PT.js
-./plugins/footnotes/langs/ro.js
-./plugins/footnotes/langs/ru.js
-./plugins/footnotes/langs/sk.js
-./plugins/footnotes/langs/sl_SI.js
-./plugins/footnotes/langs/sv_SE.js
-./plugins/footnotes/langs/th_TH.js
-./plugins/footnotes/langs/tr.js
-./plugins/footnotes/langs/uk.js
-./plugins/footnotes/langs/vi.js
-./plugins/footnotes/langs/zh_CN.js
-./plugins/footnotes/langs/zh_TW.js
+.Base js file
+[source, js]
+----
 ./plugins/footnotes/plugin.js
-....
+----
