--- a/modules/ROOT/partials/plugin-files/plugin-file-list-mergetags.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-mergetags.adoc
@@ -1,41 +1,5 @@
-....
-./plugins/mergetags/langs/ar.js
-./plugins/mergetags/langs/bg_BG.js
-./plugins/mergetags/langs/ca.js
-./plugins/mergetags/langs/cs.js
-./plugins/mergetags/langs/da.js
-./plugins/mergetags/langs/de.js
-./plugins/mergetags/langs/el.js
-./plugins/mergetags/langs/es.js
-./plugins/mergetags/langs/eu.js
-./plugins/mergetags/langs/fa.js
-./plugins/mergetags/langs/fi.js
-./plugins/mergetags/langs/fr_FR.js
-./plugins/mergetags/langs/he_IL.js
-./plugins/mergetags/langs/hi.js
-./plugins/mergetags/langs/hr.js
-./plugins/mergetags/langs/hu_HU.js
-./plugins/mergetags/langs/id.js
-./plugins/mergetags/langs/it.js
-./plugins/mergetags/langs/ja.js
-./plugins/mergetags/langs/kk.js
-./plugins/mergetags/langs/ko_KR.js
-./plugins/mergetags/langs/ms.js
-./plugins/mergetags/langs/nb_NO.js
-./plugins/mergetags/langs/nl.js
-./plugins/mergetags/langs/pl.js
-./plugins/mergetags/langs/pt_BR.js
-./plugins/mergetags/langs/pt_PT.js
-./plugins/mergetags/langs/ro.js
-./plugins/mergetags/langs/ru.js
-./plugins/mergetags/langs/sk.js
-./plugins/mergetags/langs/sl_SI.js
-./plugins/mergetags/langs/sv_SE.js
-./plugins/mergetags/langs/th_TH.js
-./plugins/mergetags/langs/tr.js
-./plugins/mergetags/langs/uk.js
-./plugins/mergetags/langs/vi.js
-./plugins/mergetags/langs/zh_CN.js
-./plugins/mergetags/langs/zh_TW.js
+.Base js file
+[source, js]
+----
 ./plugins/mergetags/plugin.js
-....
+----
