--- a/modules/ROOT/partials/plugin-files/plugin-file-list-powerpaste.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-powerpaste.adoc
@@ -1,42 +1,6 @@
-....
+.Base js file
+[source, js]
+----
 ./plugins/powerpaste/js/wordimport.js
-./plugins/powerpaste/langs/ar.js
-./plugins/powerpaste/langs/bg_BG.js
-./plugins/powerpaste/langs/ca.js
-./plugins/powerpaste/langs/cs.js
-./plugins/powerpaste/langs/da.js
-./plugins/powerpaste/langs/de.js
-./plugins/powerpaste/langs/el.js
-./plugins/powerpaste/langs/es.js
-./plugins/powerpaste/langs/eu.js
-./plugins/powerpaste/langs/fa.js
-./plugins/powerpaste/langs/fi.js
-./plugins/powerpaste/langs/fr_FR.js
-./plugins/powerpaste/langs/he_IL.js
-./plugins/powerpaste/langs/hi.js
-./plugins/powerpaste/langs/hr.js
-./plugins/powerpaste/langs/hu_HU.js
-./plugins/powerpaste/langs/id.js
-./plugins/powerpaste/langs/it.js
-./plugins/powerpaste/langs/ja.js
-./plugins/powerpaste/langs/kk.js
-./plugins/powerpaste/langs/ko_KR.js
-./plugins/powerpaste/langs/ms.js
-./plugins/powerpaste/langs/nb_NO.js
-./plugins/powerpaste/langs/nl.js
-./plugins/powerpaste/langs/pl.js
-./plugins/powerpaste/langs/pt_BR.js
-./plugins/powerpaste/langs/pt_PT.js
-./plugins/powerpaste/langs/ro.js
-./plugins/powerpaste/langs/ru.js
-./plugins/powerpaste/langs/sk.js
-./plugins/powerpaste/langs/sl_SI.js
-./plugins/powerpaste/langs/sv_SE.js
-./plugins/powerpaste/langs/th_TH.js
-./plugins/powerpaste/langs/tr.js
-./plugins/powerpaste/langs/uk.js
-./plugins/powerpaste/langs/vi.js
-./plugins/powerpaste/langs/zh_CN.js
-./plugins/powerpaste/langs/zh_TW.js
 ./plugins/powerpaste/plugin.js
-....
+----
