--- a/modules/ROOT/partials/plugin-files/plugin-file-list-tableofcontents.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-tableofcontents.adoc
@@ -1,41 +1,5 @@
-....
-./plugins/tableofcontents/langs/ar.js
-./plugins/tableofcontents/langs/bg_BG.js
-./plugins/tableofcontents/langs/ca.js
-./plugins/tableofcontents/langs/cs.js
-./plugins/tableofcontents/langs/da.js
-./plugins/tableofcontents/langs/de.js
-./plugins/tableofcontents/langs/el.js
-./plugins/tableofcontents/langs/es.js
-./plugins/tableofcontents/langs/eu.js
-./plugins/tableofcontents/langs/fa.js
-./plugins/tableofcontents/langs/fi.js
-./plugins/tableofcontents/langs/fr_FR.js
-./plugins/tableofcontents/langs/he_IL.js
-./plugins/tableofcontents/langs/hi.js
-./plugins/tableofcontents/langs/hr.js
-./plugins/tableofcontents/langs/hu_HU.js
-./plugins/tableofcontents/langs/id.js
-./plugins/tableofcontents/langs/it.js
-./plugins/tableofcontents/langs/ja.js
-./plugins/tableofcontents/langs/kk.js
-./plugins/tableofcontents/langs/ko_KR.js
-./plugins/tableofcontents/langs/ms.js
-./plugins/tableofcontents/langs/nb_NO.js
-./plugins/tableofcontents/langs/nl.js
-./plugins/tableofcontents/langs/pl.js
-./plugins/tableofcontents/langs/pt_BR.js
-./plugins/tableofcontents/langs/pt_PT.js
-./plugins/tableofcontents/langs/ro.js
-./plugins/tableofcontents/langs/ru.js
-./plugins/tableofcontents/langs/sk.js
-./plugins/tableofcontents/langs/sl_SI.js
-./plugins/tableofcontents/langs/sv_SE.js
-./plugins/tableofcontents/langs/th_TH.js
-./plugins/tableofcontents/langs/tr.js
-./plugins/tableofcontents/langs/uk.js
-./plugins/tableofcontents/langs/vi.js
-./plugins/tableofcontents/langs/zh_CN.js
-./plugins/tableofcontents/langs/zh_TW.js
+.Base js file
+[source, js]
+----
 ./plugins/tableofcontents/plugin.js
-....
+----
