--- a/modules/ROOT/partials/plugin-files/plugin-file-list-tinymcespellchecker.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-tinymcespellchecker.adoc
@@ -1,41 +1,5 @@
-....
-./plugins/tinymcespellchecker/langs/ar.js
-./plugins/tinymcespellchecker/langs/bg_BG.js
-./plugins/tinymcespellchecker/langs/ca.js
-./plugins/tinymcespellchecker/langs/cs.js
-./plugins/tinymcespellchecker/langs/da.js
-./plugins/tinymcespellchecker/langs/de.js
-./plugins/tinymcespellchecker/langs/el.js
-./plugins/tinymcespellchecker/langs/es.js
-./plugins/tinymcespellchecker/langs/eu.js
-./plugins/tinymcespellchecker/langs/fa.js
-./plugins/tinymcespellchecker/langs/fi.js
-./plugins/tinymcespellchecker/langs/fr_FR.js
-./plugins/tinymcespellchecker/langs/he_IL.js
-./plugins/tinymcespellchecker/langs/hi.js
-./plugins/tinymcespellchecker/langs/hr.js
-./plugins/tinymcespellchecker/langs/hu_HU.js
-./plugins/tinymcespellchecker/langs/id.js
-./plugins/tinymcespellchecker/langs/it.js
-./plugins/tinymcespellchecker/langs/ja.js
-./plugins/tinymcespellchecker/langs/kk.js
-./plugins/tinymcespellchecker/langs/ko_KR.js
-./plugins/tinymcespellchecker/langs/ms.js
-./plugins/tinymcespellchecker/langs/nb_NO.js
-./plugins/tinymcespellchecker/langs/nl.js
-./plugins/tinymcespellchecker/langs/pl.js
-./plugins/tinymcespellchecker/langs/pt_BR.js
-./plugins/tinymcespellchecker/langs/pt_PT.js
-./plugins/tinymcespellchecker/langs/ro.js
-./plugins/tinymcespellchecker/langs/ru.js
-./plugins/tinymcespellchecker/langs/sk.js
-./plugins/tinymcespellchecker/langs/sl_SI.js
-./plugins/tinymcespellchecker/langs/sv_SE.js
-./plugins/tinymcespellchecker/langs/th_TH.js
-./plugins/tinymcespellchecker/langs/tr.js
-./plugins/tinymcespellchecker/langs/uk.js
-./plugins/tinymcespellchecker/langs/vi.js
-./plugins/tinymcespellchecker/langs/zh_CN.js
-./plugins/tinymcespellchecker/langs/zh_TW.js
+.Base js file
+[source, js]
+----
 ./plugins/tinymcespellchecker/plugin.js
-....
+----
