--- a/modules/ROOT/partials/module-loading/bundling-plugins-that-cant-bundle.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-plugins-that-cant-bundle.adoc
@@ -1,6 +1,6 @@
 [IMPORTANT]
 ====
-The following premium plugins *can not* be bundled at this time:
+The following premium plugins *can not* be bundled if the {productname} version is earlier than **6.8.0**. However, if the {productname} version is **v6.8.0** or **later**, the following premium plugins can be bundled:
 
 * Accessibility Checker (`+a11ychecker+`)
 * Advanced Code (`+advcode+`)
