--- a/modules/ROOT/partials/module-loading/bundling-vite-es6-npm_editor.adoc
+++ b/modules/ROOT/partials/module-loading/bundling-vite-es6-npm_editor.adoc
@@ -1,7 +1,9 @@
 . Create a new source file for importing the required components from {productname} and configuring the editor.
 +
 include::partial$module-loading/bundling-required-components.adoc[]
-+
+
+NOTE: This example will only work for {productname} 6.8.0 and later.
+
 Example `+src/editor.js+`
 +
 [source,js]
@@ -40,19 +42,14 @@ import contentUiSkinCss from 'tinymce/skins/ui/oxide/content.js';
 /* The default content CSS can be changed or replaced with appropriate CSS for the editor content. */
 import contentCss from 'tinymce/skins/content/default/content.js';
 
-/* Import Premium Skins can be changes by uncommenting the below example and updating the skin_url and content_css values */
-/* import '@tiny-premium/oxide-premium-skins/build/skins/ui/material-outline/skin.js' */
-/* import '@tiny-premium/oxide-premium-skins/build/skins/ui/material-outline/content.js' */
-/* import '@tiny-premium/oxide-premium-skins/build/skins/content/material-outline/content.js' */
-
 /* Initialize TinyMCE */
 export function render () {
   tinymce.init({
     selector: 'textarea#editor',
     plugins: 'advlist code emoticons link lists table',
     toolbar: 'bold italic | bullist numlist | link emoticons',
-    skin_url: 'default', /* material-outline */
-    content_css: 'default', /* material-outline */
+    skin_url: 'default',
+    content_css: 'default',
   });
 };
 ----
