--- a/modules/ROOT/partials/plugin-files/plugin-file-list-pageembed.adoc
+++ b/modules/ROOT/partials/plugin-files/plugin-file-list-pageembed.adoc
@@ -1,4 +1,17 @@
-....
-./plugins/pageembed/css/empa30.css
+.Base js file
+[source, js]
+----
 ./plugins/pageembed/plugin.js
-....
+----
+
+.css
+[source, js]
+----
+./plugins/pageembed/css/empa30.css
+----
+
+.js
+[source, js]
+----
+./plugins/pageembed/css/empa30_css.js  // bundling requires v6.8.0 or later.
+----
