--- a/modules/ROOT/pages/bundling-plugins.adoc
+++ b/modules/ROOT/pages/bundling-plugins.adoc
@@ -7,16 +7,20 @@
 include::partial$module-loading/bundling-ref-example.adoc[]
 :!editorcomponent:
 
+== Example 1
+
 The following table shows examples of the syntax used to bundle the following plugin.
 
 Required files for an example plugin:
 
-....
+.when using `content.css`
+[source, js]
+----
 ./plugins/example/content.css
 ./plugins/example/plugin.js
-....
+----
 
-Example syntax for including the example "plugin" in a bundle:
+Example syntax for including the example "plugin" in a bundle for styling:
 
 [cols='1,1,4']
 |===
@@ -58,5 +62,63 @@ require('../tinymce/plugins/example/plugin.js');
 |===
 
 IMPORTANT: The handling of content CSS files (such as `+content.css+` or `+content.min.css+`) varies between bundling tools. View the relevant guide for the required syntax at xref:introduction-to-bundling-tinymce.adoc[Bundling {productname} with a module loader].
+
+== Example 2
+
+The following table shows examples of the syntax used to bundle the following plugin.
+
+Required files for an example plugin:
+
+.when using `content.js` or `content_css.js`
+[source, js]
+----
+./plugins/example/content.js // or './plugins/example/content_css.js'
+./plugins/example/plugin.js
+----
+
+Example syntax for including the example 2 "plugin" in a bundle using `content.js` or `content_css.js` files for styling:
+
+[cols='1,1,4']
+|===
+|Module Syntax |Source |Example
+
+.2+|ES6+
+|npm
+a|
+[source, js]
+----
+import pluginCss from 'tinymce/plugins/example/content.js';
+//import pluginCss from 'tinymce/plugins/example/content_css.js';
+import 'tinymce/plugins/example';
+----
+
+|`.zip`
+a|
+[source, js]
+----
+import pluginCss from '../tinymce/plugins/example/content.js';
+//import pluginCss from '../tinymce/plugins/example/content_css.js';
+import '../tinymce/plugins/example/plugin';
+----
+
+.2+|Common JS
+|npm
+a|
+[source, js]
+----
+const pluginCss = require('tinymce/plugins/example/content.js');
+//require('tinymce/plugins/example/content_css.js'); 
+require('tinymce/plugins/example');
+----
+
+|`.zip`
+a|
+[source, js]
+----
+const pluginCss = require('../tinymce/plugins/example/content.js');
+//require('../tinymce/plugins/example/content_css.js');
+require('../tinymce/plugins/example/plugin.js');
+----
+|===
 
 include::partial$module-loading/bundling-plugin-files.adoc[]
